--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "init-db": "node src/init_db_postgres_simple.js",
     "normalize": "node src/scripts/normalize_school_data.js",
     "build": "echo 'Backend build complete'"
   },
@@ -24,6 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "sqlite3": "^5.1.7",
     "xlsx": "^0.18.5"
   },
@@ -31,4 +33,3 @@
     "nodemon": "^3.1.4"
   }
 }
-
