--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,128 @@
-# Backend Configuration
+# ============================================
+# SINFOMIK BACKEND CONFIGURATION
+# ============================================
+# Copy this file to .env and fill in your values
+# IMPORTANT: Never commit .env to git!
+
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
 PORT=5000
 NODE_ENV=production
+MAX_CONNECTIONS=500
 
-# Database Path (Azure persistent storage)
-DB_PATH=/home/data/academic_dashboard.db
+# ============================================
+# DATABASE CONFIGURATION (PostgreSQL)
+# ============================================
+# Database Type - always use 'postgresql' for production
+DB_TYPE=postgresql
 
-# JWT Secret
-JWT_SECRET=your_secure_jwt_secret_here_change_in_production
+# PostgreSQL Connection
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=sinfomik
+DB_USER=sinfomik_user
+DB_PASSWORD=sinfomik123
 
-# CORS
-FRONTEND_URL=https://your-frontend-url.azurewebsites.net
+# Connection Pool Settings
+DB_POOL_MIN=10
+DB_POOL_MAX=100
+DB_QUERY_TIMEOUT=30000
+
+# ============================================
+# JWT AUTHENTICATION
+# ============================================
+# Generate a secure secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your_secure_jwt_secret_here_change_in_production_min_32_chars
+JWT_EXPIRES_IN=5h
+JWT_WARNING_TIME=1800000
+
+# ============================================
+# CORS CONFIGURATION
+# ============================================
+# Frontend URL(s) allowed to access the API
+# For multiple URLs, separate with comma in code or use nginx reverse proxy
+FRONTEND_URL=http://localhost:3000
+
+# Alternative for production:
+# FRONTEND_URL=https://your-domain.com
+# FRONTEND_URL=http://YOUR_VM_IP
+
+# ============================================
+# RATE LIMITING
+# ============================================
+# General API rate limiting (per IP)
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=1000
+
+# Auth routes rate limiting (login/logout)
+AUTH_RATE_LIMIT_MAX=100
+
+# Request concurrency limits for queue middleware
+MAX_CONCURRENT_EXPENSIVE=15
+MAX_CONCURRENT_MODERATE=100
+MAX_CONCURRENT_LIGHT=300
+
+# ============================================
+# FILE UPLOAD & REQUEST SIZE
+# ============================================
+MAX_JSON_SIZE=10mb
+
+# ============================================
+# REDIS (Optional - for distributed rate limiting)
+# ============================================
+# Leave empty for single-instance deployment (in-memory rate limiting)
+# Required for multi-instance/load-balanced deployments
+REDIS_URL=
+# Example: redis://localhost:6379
+# Example Azure: rediss://your-redis.redis.cache.windows.net:6380?abortConnect=false
+
+# Alternative name (Azure)
+REDIS_CONNECTION_STRING=
+
+# ============================================
+# METRICS & MONITORING (Optional)
+# ============================================
+# Token for accessing /metrics endpoint
+# Generate: node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
+METRICS_TOKEN=
+
+# ============================================
+# MIGRATION (Optional - only for data migration)
+# ============================================
+# Path to SQLite database file (if migrating from SQLite)
+DB_PATH=/path/to/old/academic_dashboard.db
+
+# ============================================
+# NOTES FOR DEPLOYMENT
+# ============================================
+# 
+# Local Development:
+# ------------------
+# NODE_ENV=development
+# DB_HOST=localhost
+# FRONTEND_URL=http://localhost:3000
+#
+# VM Linux Production:
+# --------------------
+# NODE_ENV=production
+# DB_HOST=localhost
+# DB_PASSWORD=<strong_password>
+# JWT_SECRET=<random_32_char_string>
+# FRONTEND_URL=http://YOUR_VM_IP
+#
+# Azure App Service:
+# ------------------
+# Set all variables in Azure Portal > Configuration > Application Settings
+# DB_HOST=<postgres_server>.postgres.database.azure.com
+# DB_USER=<admin>@<postgres_server>
+# REDIS_URL=<azure_redis_connection_string>
+#
+# Security Checklist:
+# -------------------
+# ✓ Change JWT_SECRET to random 32+ character string
+# ✓ Use strong DB_PASSWORD
+# ✓ Set NODE_ENV=production for production deployments
+# ✓ Update FRONTEND_URL to your actual domain/IP
+# ✓ Enable REDIS_URL for load-balanced deployments
+# ✓ Set METRICS_TOKEN if using monitoring endpoint
